# osmanthus

./: .pre-commit-config.yaml  README.md  cli.py  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: bot_automerge.yml  dependabot_automerge.yml  main.yml  python-publish.yml
osmanthus/: __init__.py  cli.py  engine.py  evaluate.py
tests/: cli_test.py  engine_test.py  evaluate_test.py  test_cli.py  test_evaluation.py  test_puzzles.py
tests/test_files/: endgame.fen  mate2.fen  positions.fen
