[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
osmanthus = ["performance.bin"]

[project]
name = "osmanthus"
dynamic = ["version"]
description = "An algorithmic chess engine, written in Python."
authors = [{name = "Ian Breckenridge"}]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["chess"]
dependencies = ["chess==1.11.1"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Games/Entertainment :: Board Games",
  "Topic :: Games/Entertainment :: Turn Based Strategy",
  "Typing :: Typed",
]

[project.scripts]
# osmanthus = "osmanthus.main:main"
osmanthus-cli = "osmanthus.cli:main"

[project.urls]
Repository = "https://github.com/i13e/osmanthus"
Documentation = "https://github.com/i13e/osmanthus/wiki"
Issues = "https://github.com/i13e/osmanthus/issues"

[tool.setuptools_scm]
